--- a/src/fe/CleanCooks/src/app/home-page/home-page.component.html
+++ b/src/fe/CleanCooks/src/app/home-page/home-page.component.html
@@ -1,1 +1,6 @@
-<p>home-page works!</p>
+<mat-card class="mat-card">
+  <mat-card-title>Home Page</mat-card-title>
+  <mat-card-content>
+    <p>Username : {{currUser.name}}</p>
+  </mat-card-content>
+</mat-card>
