--- a/src/fe/CleanCooks/src/app/home-page/home-page.component.scss
+++ b/src/fe/CleanCooks/src/app/home-page/home-page.component.scss
@@ -3,9 +3,22 @@
   width: 30em;
   height: 30em;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   background-color: #f5f5f5;
   border-radius: 10px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+}
+.mat-card-content {
+  margin-top: 2.5em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.mat-card-footer {
+  margin-top: 1em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
