--- a/src/fe/CleanCooks/src/app/home-page/home-page.component.html
+++ b/src/fe/CleanCooks/src/app/home-page/home-page.component.html
@@ -4,7 +4,7 @@
   <img mat-card-image ngSrc="assets/paella.jpg" width="225" height="225" alt="paella">
    </mat-card-content>
    <mat-card-footer class="mat-card-footer">
-    <button mat-fab color="primary" style="margin-right: 2em">
+    <button mat-fab color="primary" onclick="like()" style="margin-right: 2em">
       <mat-icon>
         favorite
       </mat-icon>
