added router frontend

--- a/src/fe/CleanCooks/src/app/home-page/home-page.component.html
+++ b/src/fe/CleanCooks/src/app/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <button mat-mini-fab color="primary" matBadge="3">
+  <button mat-mini-fab color="primary" routerLink="/matches" routerLinkActive="routerLinkActive" matBadge="3">
     <mat-icon>
       date_range
     </mat-icon>
