now matches page loads fine

--- a/src/fe/CleanCooks/src/app/matches/matches.component.html
+++ b/src/fe/CleanCooks/src/app/matches/matches.component.html
@@ -6,5 +6,11 @@
     <p>
       {{matchedUser.description}}
     </p>
+    <div>
+    <img src="assets/insta.svg" alt="instagram" class="icon">
+      <p style="width:30%">
+        {{matchedUser.insta}}
+      </p>
+    </div>
   </mat-card-content>
 </mat-card>
