--- a/src/fe/CleanCooks/src/app/matches/matches.component.scss
+++ b/src/fe/CleanCooks/src/app/matches/matches.component.scss
@@ -7,3 +7,10 @@
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
+.icon {
+  //put the icon on the left
+  float: left;
+  width: 10%;
+  height: 10%;
+  border-radius: 10px;
+}
