good error handling for sign up and log in
also good redirect between sign up and log in

--- a/src/fe/CleanCooks/src/app/log-in/log-in.component.html
+++ b/src/fe/CleanCooks/src/app/log-in/log-in.component.html
@@ -14,5 +14,10 @@
     <button mat-fab-button color="primary" (click)="login()" class="mat-fab-button">
       <mat-icon>lock_open</mat-icon>
     </button>
+    <br>
+    <br>
+    <a routerLink="../sign-up" routerLinkActive="active">
+      Sign Up Here!
+    </a>
   </mat-card-content>
 </mat-card>
