--- a/src/fe/CleanCooks/src/app/sign-up/sign-up.component.html
+++ b/src/fe/CleanCooks/src/app/sign-up/sign-up.component.html
@@ -1,1 +1,20 @@
-<p>sign-up works!</p>
+<mat-card>
+  <mat-card-title>Sign up</mat-card-title>
+<mat-card-content>
+    <form>
+      <mat-form-field>
+        <input matInput placeholder="Email" [(ngModel)]="signUpData.email" name="email">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Username" [(ngModel)]="signUpData.username" name="username">
+      </mat-form-field>
+      <button mat-fab-button color="primary" (click)="signUp()">
+        Sign up
+      </button>
+    </form>
+  <a routerLink="../log-in" routerLinkActive="active">
+    Already have an account? Log in
+  </a>
+</mat-card-content>
+</mat-card>
+
