--- a/src/fe/CleanCooks/src/app/sign-up/sign-up.component.html
+++ b/src/fe/CleanCooks/src/app/sign-up/sign-up.component.html
@@ -8,6 +8,9 @@
       <mat-form-field>
         <input matInput placeholder="Username" [(ngModel)]="signUpData.username" name="username">
       </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Password" [(ngModel)]="signUpData.password" name="password">
+      </mat-form-field>
       <button mat-fab-button color="primary" (click)="signUp()">
         Sign up
       </button>
