set up profile page

--- a/src/fe/CleanCooks/src/app/home-page/home-page.component.html
+++ b/src/fe/CleanCooks/src/app/home-page/home-page.component.html
@@ -11,11 +11,12 @@
   </p>
   <p style = "flex: 1 1 auto"></p>
   <p>
-    Logout?
+    Profile
   </p>
-  <button mat-mini-fab color="primary">
+  <button mat-mini-fab color="primary" routerLink="../profile"
+    routerLinkActive="routerLinkActive">
     <mat-icon>
-      exit_to_app
+      account_circle
     </mat-icon>
   </button>
   </mat-toolbar>
