this looks really bad, but it works for now

--- a/src/fe/CleanCooks/src/app/profile/profile.component.html
+++ b/src/fe/CleanCooks/src/app/profile/profile.component.html
@@ -1,1 +1,24 @@
-<p>profile works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Profile</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <form>
+    <mat-form-field>
+      <input matInput placeholder="City" [(ngModel)]="profile.city">
+    </mat-form-field>
+    <mat-form-field>
+      <textarea matInput placeholder="Description" [(ngModel)]="profile.description"></textarea>
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Instagram" [(ngModel)]="profile.insta">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Age" [(ngModel)]="profile.age">
+    </mat-form-field>
+    </form>
+    <button mat-fab-button color="primary" (click)="saveProfile(profile)">
+     <mat-icon>save</mat-icon>
+   </button>
+  </mat-card-content>
+  </mat-card>
