still need to make the pop up look half-decent if it appears

--- a/src/fe/CleanCooks/src/app/home-page/home-page.component.html
+++ b/src/fe/CleanCooks/src/app/home-page/home-page.component.html
@@ -1,3 +1,7 @@
+@if(0.1 + 0.2 === 0.3) {
+<app-modify-profile-popup>
+</app-modify-profile-popup>
+}
 <mat-toolbar>
   <button mat-mini-fab color="primary"
           routerLink="../matches" routerLinkActive="routerLinkActive"
