--- a/src/fe/CleanCooks/src/app/profile/profile.component.html
+++ b/src/fe/CleanCooks/src/app/profile/profile.component.html
@@ -2,13 +2,13 @@
   <mat-card-header>
     <mat-card-title>Profile</mat-card-title>
   </mat-card-header>
-  <mat-card-content>
+  <mat-card-content class = "mat-card-content">
     <form>
     <mat-form-field>
       <input matInput placeholder="City" [(ngModel)]="profile.city" name="city">
     </mat-form-field>
     <mat-form-field>
-      <textarea matInput placeholder="Description" [(ngModel)]="profile.description" name = "description"></textarea>
+      <input matInput placeholder="Description" [(ngModel)]="profile.description" name = "description">
     </mat-form-field>
     <mat-form-field>
       <input matInput placeholder="Instagram" [(ngModel)]="profile.insta" name = "insta">
