minor stylistic changes

--- a/src/fe/CleanCooks/src/app/log-in/log-in.component.html
+++ b/src/fe/CleanCooks/src/app/log-in/log-in.component.html
@@ -11,7 +11,7 @@
         <input matInput placeholder="Password" [(ngModel)]="loginData.password" name="password" type="password">
       </mat-form-field>
     </form>
-    <button mat-fab-button color="primary" (click)="login()" class="mat-fab-button">
+    <button mat-fab color="primary" (click)="login()">
       <mat-icon>lock_open</mat-icon>
     </button>
     <br>
