--- a/src/fe/CleanCooks/src/app/sign-up/sign-up.component.html
+++ b/src/fe/CleanCooks/src/app/sign-up/sign-up.component.html
@@ -11,7 +11,7 @@
       <mat-form-field>
         <input matInput placeholder="Password" [(ngModel)]="signUpData.password" name="password">
       </mat-form-field>
-      <button mat-fab-button color="primary" (click)="signUp()">
+      <button mat-fab color="primary" (click)="signUp()">
         Sign up
       </button>
     </form>
