forgot about this

--- a/src/fe/CleanCooks/src/app/profile/profile.component.html
+++ b/src/fe/CleanCooks/src/app/profile/profile.component.html
@@ -17,7 +17,7 @@
       <input matInput placeholder="Age" [(ngModel)]="profile.age" name = "age">
     </mat-form-field>
     </form>
-    <button mat-fab-button color="primary" (click)="saveProfile(profile)">
+    <button mat-fab color="primary" (click)="saveProfile(profile)">
      <mat-icon>save</mat-icon>
    </button>
   </mat-card-content>
