--- a/src/fe/CleanCooks/src/app/home-page/home-page.component.html
+++ b/src/fe/CleanCooks/src/app/home-page/home-page.component.html
@@ -13,7 +13,9 @@
   <p class="toolbar_text">
     Your future (delicious) dates are here!
   </p>
-  <p style = "flex: 1 1 auto"></p>
+  <p class="text_right">
+
+  </p>
   <p>
     Profile
   </p>
