need to chabge this before i go

--- a/src/fe/CleanCooks/src/app/home-page/home-page.component.scss
+++ b/src/fe/CleanCooks/src/app/home-page/home-page.component.scss
@@ -29,7 +29,8 @@
   color: #000000;
 }
 .text_right {
-  flex: 1 1 auto;
+  margin-left: 35em;
+  margin-right: 0.5em;
   font-size: 1.5em;
   font-weight: 400;
 }
