--- a/src/fe/CleanCooks/src/app/modify-profile-popup/modify-profile-popup.component.html
+++ b/src/fe/CleanCooks/src/app/modify-profile-popup/modify-profile-popup.component.html
@@ -1,8 +1,11 @@
+<div class="container">
 <h1> You haven't filled out your profile yet! </h1>
  <div mat-dialog-content>
   In order to access the full functionality of the site, we need you to fill out your profile.
   </div>
-  <div mat-dialog-actions>
-  <button mat-fab-button (click)="closeDialog()">
+  <div mat-dialog-actions class="profileButton">
+  <button mat-fab (click)="closeDialog()">
     <mat-icon>perm_identity</mat-icon>
   </button>
+  </div>
+</div>
